# labyrinth

./: .gitignore  CMakeLists.txt  LabyrinthConfig.h.in  README.md  main
include/: .academy.md  main.h
src/: labyrinth.cpp  labyrinth.h  main.cpp
